feat: add address management, account security, and user agreement pages
- Add shipping address CRUD (Address model/mapper/service/controller)
- Create address table SQL migration
- Add AddressPage for managing shipping addresses (list/add/edit/delete/set-default)
- Add AccountSecurityPage with security overview and navigation
- Add UserAgreementPage with platform terms and privacy policy
- Enhance UserProfilePage with credit level labels (新手/普通/良好/优质/卓越)
- Update ProfilePage with quick access links to new pages
- Update App.tsx with new routes (/addresses, /account-security, /agreement)
- Fix BrowseHistoryService List.of() incompatibility with Java 8
- Update SecurityConfig to allow address API endpoints

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>